syntax = "proto3";

package twitchroulette.v1;

message StreamTag {
  string id = 1;
  string name = 2;
}

message StreamGame {
  string id = 1;
  string name = 2;
  string image_url = 3;
}

message StreamUser {
  string id = 1;
  string display_name = 2;
  string login_name = 3;
  string image_url = 4;
}

message Stream {
  string id = 1;
  StreamUser user = 2;
  StreamGame game = 3;
  string title = 4;
  repeated StreamTag tags = 5;
  bool online = 6;
}

message GetRandomStreamRequest {
  repeated string included_tag_ids = 1;
  repeated string excluded_tag_ids = 2;
  repeated string included_game_ids = 3;
  repeated string excluded_game_ids = 4;
}

message GetRandomStreamResponse {
  Stream stream = 1;
  string filter_id = 2;
}

message GetStreamTagsRequest {
  string parent = 1;
  string page_token = 2;
}

message GetStreamTagsResponse {
  repeated StreamTag tags = 1;
}

message GetStreamGamesRequest {
  string parent = 1;
  string page_token = 2;
}

message GetStreamGamesResponse {
  repeated StreamGame games = 1;
}

service TwitchRouletteService {
  rpc GetRandomStream(GetRandomStreamRequest) returns (GetRandomStreamResponse) {}
  rpc GetStreamTags(GetStreamTagsRequest) returns (GetStreamTagsResponse) {}
  rpc GetStreamGames(GetStreamGamesRequest) returns (GetStreamGamesResponse) {}
}

